# triton_server_custom_plugin_issue

./: CMakeLists.txt  README.md
plugin/: checkMacrosPlugin.cpp  checkMacrosPlugin.h  detectionLayerPlugin.cpp  detectionLayerPlugin.h
